# isofare-mapping

./: .gitignore  isofare-final.ipynb  isofare_first_draft.ipynb  pyproject.toml
data/: check_metra_names.csv  matched_metra_stations.csv
data/chi/: Metra Stations by Fare Zone (Since 2024).kml  metra_zone_fares.csv
data/ny/nybb_26b/: nybb.dbf  nybb.shp  nybb.shp.xml  nybb.shx
