[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "gtfs-kit>=12.0.4",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "osmnx>=2.1.0",
    "ox>=3.0.32",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
]
