[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "gtfs-kit>=12.0.4",
    "ipywidgets>=8.1.8",
    "jellyfish>=1.2.1",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "osmnx>=2.1.0",
    "ox>=3.0.32",
    "pykml>=0.2.0",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
]
